methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:3: error: not found: value color
    var couleur = color.black
                  ^SlugTracking:4: error: type mismatch;
 found   : Unit
 required: Boolean
    while (!estSurBiscuit) {
    ^