methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  	var couleur = color.black
    while (!estSurBiscuit) {
      if (estFaceMur()) {
        droite()
      }
      avance()
      couleur = getCouleurSol()
      recule()
      if (couleur == Color.green) {
        avance()
      } else {
        droite()
      }
    }
}